Mega super duper commit (Stat System Refactoring, Dungeon refactoring, Setup refactoring,